--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <h1>Bienvenido a mi pagina web</h1>
+  <h1>Bienvenida preciosa</h1>
   <p>Esta es una pagina de ejemplo.</p>
   <p>Puedes editar el codigo HTML y CSS para personalizarla segun tus necesidades.</p>
 </body>
