--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
 <section id="inicio">
 <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Imagen de cabecera">
-<h1>Estefany Aguilar</h1>
-<p>Programadora web apasionada con experiencia en startups colombianas. Habilidades en HTML, CSS, JavaScript. Enfoque en interfaces de usuario atractivas y eficientes.</p>
+<h1>Britney Delhy Qqueso Rodriguez</h1>
+<p>Futura ingeniera de software. Habilidades en HTML, CSS, JavaScript. Enfoque en interfaces de usuario atractivas y eficientes.</p>
 <ul>
 
 <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
