--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     }
 
     #inicio img {
-      width: 150px; /* Cambiar el ancho de la imagen según tu preferencia */
-      height: 150px; /* Cambiar la altura de la imagen según tu preferencia */
-      border-radius: 50%; /* Opcional: agregar bordes redondeados a la imagen */
+      width: 250 /* Cambiar el ancho de la imagen según tu preferencia */
+      height: 250 /* Cambiar la altura de la imagen según tu preferencia */
+      border-radius: 25 /* Opcional: agregar bordes redondeados a la imagen */
       display: inline-block;
       margin-top: 20px;
       margin-bottom: 20px;
