--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <section id="inicio">
 <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Imagen de cabecera">
 <h1>Britney Delhy Qqueso Rodriguez</h1>
-<p>Futura ingeniera de software. Habilidades en HTML, CSS, JavaScript. Enfoque en interfaces de usuario atractivas y eficientes.</p>
+<p>Futura ingeniera de software. Una gran mujer, enamorada, novia, esposa y madre de nuestros hijos.</p>
 <ul>
 
 <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
