--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-<h1>¡Feliz Cumpleaños!</h1>
     
 <section id="inicio">
-<img src="C:\Users\kevin\Downloads\DOCUMENTOS\DOCUMENTOS\20211016_191241.jpg" alt="Imagen de cabecera">
+<h1>¡Feliz Cumpleaños Mi Queria Esposa!</h1>
+<img src="https://drive.google.com/file/d/14wJTsddjAaYKoNhVInDHNRgYGk0bF1P8/view?usp=share_link" alt="Imagen de cabecera">
 <h1>Britney Delhy Qqueso Rodriguez</h1>
 <p>Futura ingeniera de software. Una gran mujer, enamorada, novia, esposa y madre de nuestros hijos.</p>
 
