--- a/index.html
+++ b/index.html
@@ -106,10 +106,9 @@
 <img src="https://drive.google.com/file/d/14wJTsddjAaYKoNhVInDHNRgYGk0bF1P8/view?usp=share_link" alt="Imagen de cabecera">
 <h1>Britney Delhy Qqueso Rodriguez</h1>
 <p>Futura ingeniera de software. Una gran mujer, enamorada, novia, esposa y madre de nuestros hijos.</p>
-
 </section>
 
-<section id="habilidades">
+<section id="Preciosa">
 <h2>Habilidades</h2>
 <ul>
 <li>HTML</li>
@@ -119,7 +118,7 @@
 </ul>
 </section>
 
-<section id="proyectos">
+<section id="Amable">
 <h2>Proyectos</h2>
 <ul>
 <li>Nombre del Proyecto 1</li>
@@ -129,14 +128,9 @@
 </ul>
 </section>
 
-<section id="contacto">
+<section id="Luchadora">
 <h2>Contacto</h2>
 <p>Puedes contactarme a través de los siguientes medios:</p>
-<ul>
-<li>Email: tu@email.com</li>
-<li>Teléfono: +123456789</li>
-<li>Redes sociales: enlace a tus perfiles en redes sociales</li>
-</ul>
 </section>
 
 </body>
