--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
 <section id="Luchadora">
 <h2>Contacto</h2>
 <p>Puedes contactarme a través de los siguientes medios:</p>
+<ul>
+<li>Nombre del Proyecto 1</li>
+<li>Nombre del Proyecto 2</li>
+<li>Nombre del Proyecto 3</li>
+</ul>
 </section>
 
 </body>
