--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     
 <section id="inicio">
 <h1>¡Feliz Cumpleaños Mi Queria Esposa!</h1>
-<img src="https://drive.google.com/file/d/14wJTsddjAaYKoNhVInDHNRgYGk0bF1P8/view?usp=share_link" alt="Imagen de cabecera">
+<img src="https://i.pinimg.com/564x/3f/75/dd/3f75dd965cc2f40163756266ed87ea85.jpg" alt="Imagen de cabecera">
 <h1>Britney Delhy Qqueso Rodriguez</h1>
 <p>Futura ingeniera de software. Una gran mujer, enamorada, novia, esposa y madre de nuestros hijos.</p>
 </section>
