--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Feliz Dia Mi Amor</title>
-<style>
+    <title>Feliz Dia Mi Amor</title>
+    <style>
     /* Reset de estilos para el body */
     body {
       margin: 0;
@@ -20,10 +20,13 @@
     h1 {
         margin-bottom: 20px;
     }
-
+    #header {
+            background-color: #e6e6e6;
+            padding: 15px;
+    }
     /* Estilos para la sección de inicio */
     #inicio {
-      padding: 50px;
+      padding: 80px;
       background-color: #BCE5F5;
       text-align: center;
     }
@@ -102,7 +105,9 @@
 <body>
     
 <section id="inicio">
+<div id="header">
 <h1>¡Feliz Cumpleaños Mi Queria Esposa!</h1>
+</div>
 <img src="https://i.pinimg.com/564x/3f/75/dd/3f75dd965cc2f40163756266ed87ea85.jpg" alt="Imagen de cabecera">
 <h1>Britney Delhy Qqueso Rodriguez</h1>
 <p>Futura ingeniera de software. Una gran mujer, enamorada, novia, esposa y madre de nuestros hijos.</p>
