--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
     h1 {
         margin-bottom: 20px;
     }
-    #header {
-            background-color: #e6e6e6;
-            padding: 15px;
-    }
+    
     /* Estilos para la sección de inicio */
     #inicio {
       padding: 80px;
@@ -42,13 +39,13 @@
 
 
     /* Estilos para la sección de habilidades */
-    #habilidades {
+    #detallitos {
       padding: 50px;
       background-color: #FFD1DC;
     }
 
     /* Estilos para la lista de habilidades */
-    #habilidades ul {
+    #detallitos ul {
       list-style-type: none;
     }
 
@@ -105,16 +102,14 @@
 <body>
     
 <section id="inicio">
-<div id="header">
 <h1>¡Feliz Cumpleaños Mi Queria Esposa!</h1>
-</div>
 <img src="https://i.pinimg.com/564x/3f/75/dd/3f75dd965cc2f40163756266ed87ea85.jpg" alt="Imagen de cabecera">
 <h1>Britney Delhy Qqueso Rodriguez</h1>
 <p>Futura ingeniera de software. Una gran mujer, enamorada, novia, esposa y madre de nuestros hijos.</p>
 </section>
 
-<section id="Preciosa">
-<h2>Habilidades</h2>
+<section id="detallitos">
+<h2>Feliz 22 Añitos</h2>
 <ul>
 <li>HTML</li>
 <li>CSS</li>
