--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     /* Estilos para la sección de habilidades */
     #detallitos {
       padding: 50px;
-      background-color: #FFD1DC;
+      background-color: #F7DC6F;
     }
 
     /* Estilos para la lista de habilidades */
@@ -50,13 +50,13 @@
     }
 
     /* Estilos para la sección de proyectos */
-    #proyectos {
+    #detalle {
       padding: 50px;
       background-color: #FFFFC2;
     }
 
     /* Estilos para la lista de proyectos */
-    #proyectos ul {
+    #detalle ul {
       list-style-type: none;
     }
 
@@ -118,8 +118,8 @@
 </ul>
 </section>
 
-<section id="Amable">
-<h2>Proyectos</h2>
+<section id="detalle">
+<h2>Ya Estas Viejita</h2>
 <ul>
 <li>Nombre del Proyecto 1</li>
 <li>Nombre del Proyecto 2</li>
