--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <section id="detallitos">
 <h2>Feliz 22 Añitos</h2>
-<img src=""20211016_191241.jpg" alt="fotito">
+<img src="20211016_191241.jpg" alt="fotito">
 <ul>
 <li>HTML</li>
 <li>CSS</li>
