--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <section id="detallitos">
 <h2>Feliz 22 Añitos</h2>
-<img src="20211016_191241.jpg" alt="fotito">
+<img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
 <ul>
 <li>HTML</li>
 <li>CSS</li>
