--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
     h1 {
         margin-bottom: 20px;
+        font-size: 24px;
     }
     
     /* Estilos para la sección de inicio */
     #inicio {
-      padding: 80px;
+      padding: 40px;
       background-color: #BCE5F5;
       text-align: center;
     }
