--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     /* Estilos para la sección de habilidades */
     #detallitos {
       padding: 50px;
-      background-color: #F7DC6F;
+      background-color: #EAEDED;
     }
 
     /* Estilos para la lista de habilidades */
@@ -58,7 +58,7 @@
     /* Estilos para la sección de proyectos */
     #detalle {
       padding: 50px;
-      background-color: #FFFFC2;
+      background-color: #A9CCE3;
     }
 
     /* Estilos para la lista de proyectos */
@@ -69,7 +69,7 @@
     /* Estilos para la sección de contacto */
     #contacto {
       padding: 50px;
-      background-color: #DCE0EA;
+      background-color: #A2D9CE;
     }
 
     /* Estilos para la lista de contacto */
