--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     /* Estilos para la sección de habilidades */
     #detallitos {
       padding: 50px;
-      background-color: #EAEDED;
+      background-color: #B2BABB;
     }
 
     /* Estilos para la lista de habilidades */
@@ -58,7 +58,7 @@
     /* Estilos para la sección de proyectos */
     #detalle {
       padding: 50px;
-      background-color: #A9CCE3;
+      background-color: #73C6B6;
     }
 
     /* Estilos para la lista de proyectos */
@@ -67,20 +67,20 @@
     }
 
     /* Estilos para la sección de contacto */
-    #contacto {
+    #luchadora {
       padding: 50px;
-      background-color: #A2D9CE;
+      background-color: #7FB3D5;
     }
 
     /* Estilos para la lista de contacto */
-    #contacto ul {
+    #luchadora ul {
       list-style-type: none;
     }
 
     /* Estilos generales para los párrafos y listas */
     p, ul {
       font-family: Arial, sans-serif;
-      font-size: 16px;
+      font-size: 22px;
       color: #333;
     }
 
@@ -117,32 +117,19 @@
 <section id="detallitos">
 <h2>Feliz 22 Añitos</h2>
 <img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
-<ul>
-<li>HTML</li>
-<li>CSS</li>
-<li>JavaScript</li>
-<li>Otras habilidades relevantes</li>
-</ul>
+<p>Puedes contactarme a través de los siguientes medios:</p>
 </section>
 
 <section id="detalle">
 <h2>Ya Estas Viejita</h2>
-<ul>
-<li>Nombre del Proyecto 1</li>
-<li>Nombre del Proyecto 2</li>
-<li>Nombre del Proyecto 3</li>
-
-</ul>
+<img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
+<p>Puedes contactarme a través de los siguientes medios:</p>
 </section>
 
 <section id="Luchadora">
-<h2>Contacto</h2>
+<h2>Siempre Estaré A Tu Lado</h2>
+<img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
 <p>Puedes contactarme a través de los siguientes medios:</p>
-<ul>
-<li>Nombre del Proyecto 1</li>
-<li>Nombre del Proyecto 2</li>
-<li>Nombre del Proyecto 3</li>
-</ul>
 </section>
 
 </body>
