--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         font-size: 30px;
     }
         
+    h3 {
+        margin-bottom: 20px;
+        font-size: 30px;
+    }
+        
     /* Estilos para la sección de inicio */
     #inicio {
       padding: 40px;
@@ -69,7 +74,7 @@
     /* Estilos para la sección de contacto */
     #luchadora {
       padding: 50px;
-      background-color: #7FB3D5;
+      background-color: #5499C7;
     }
 
     /* Estilos para la lista de contacto */
@@ -127,7 +132,7 @@
 </section>
 
 <section id="Luchadora">
-<h2>Siempre Estaré A Tu Lado</h2>
+<h3>Siempre Estaré A Tu Lado</h3>
 <img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
 <p>Puedes contactarme a través de los siguientes medios:</p>
 </section>
