--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
 
     /* Estilos generales para los encabezados */
-    h1, h2 {
+    h1, h2, h3 {
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
@@ -58,6 +58,7 @@
     /* Estilos para la lista de habilidades */
     #detallitos ul {
       list-style-type: none;
+      text-align: right;
     }
 
     /* Estilos para la sección de proyectos */
@@ -69,6 +70,7 @@
     /* Estilos para la lista de proyectos */
     #detalle ul {
       list-style-type: none;
+      text-align: right;
     }
 
     /* Estilos para la sección de contacto */
@@ -80,6 +82,7 @@
     /* Estilos para la lista de contacto */
     #luchadora ul {
       list-style-type: none;
+      text-align: right;
     }
 
     /* Estilos generales para los párrafos y listas */
