--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
 <section id="detallitos">
 <h2>Feliz 22 Añitos</h2>
 <img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
-<p>Puedes contactarme a través de los siguientes medios:</p>
+<p>El día de hoy cumples 22 añitos amor y me alegra mucho poder acompañarte este día tan especial para ti</p>
 </section>
 
 <section id="detalle">
 <h2>Ya Estas Viejita</h2>
 <img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
-<p>Puedes contactarme a través de los siguientes medios:</p>
+<p>Estamos embejeciendo juntitos, uno al lado de otro, haciendo renegar pero siempre dandote mucho amor</p>
 </section>
 
 <section id="Luchadora">
 <h3>Siempre Estaré A Tu Lado</h3>
 <img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
-<p>Puedes contactarme a través de los siguientes medios:</p>
+<p>Hicimos muchos juramentos juntos y como te lo mencione una y otra ves, siempre estare a tu lado porque nos vamos a casar y vamos a tener un hermosa familia</p>
 </section>
 
 </body>
