--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     /* Estilos para la sección de habilidades */
     #detallitos {
-      padding: 50px;
+      padding: 40px;
       background-color: #B2BABB;
     }
 
@@ -63,7 +63,7 @@
 
     /* Estilos para la sección de proyectos */
     #detalle {
-      padding: 50px;
+      padding: 40px;
       background-color: #73C6B6;
     }
 
@@ -76,7 +76,7 @@
     /* Estilos para la sección de contacto */
     #luchadora {
       padding: 50px;
-      background-color: #5499C7;
+      background-color: #B2BABB;
     }
 
     /* Estilos para la lista de contacto */
