--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
 
 <section id="detalle">
 <h2>Ya Estas Viejita</h2>
-<img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
+<img src="https://i.pinimg.com/564x/55/09/ba/5509bafbe3debddd442be2bf08d5a4e4.jpg" alt="fotito">
 <p>Estamos embejeciendo juntitos, uno al lado de otro, haciendo renegar pero siempre dandote mucho amor</p>
 </section>
 
-<section id="Luchadora">
-<h3>Siempre Estaré A Tu Lado</h3>
-<img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
+<section id="luchadora">
+<h2>Siempre Estaré A Tu Lado</h2>
+<img src="https://i.pinimg.com/564x/5b/f6/0b/5bf60b43507cabe20fca13dbbb2b95a0.jpg" alt="fotito">
 <p>Hicimos muchos juramentos juntos y como te lo mencione una y otra ves, siempre estare a tu lado porque nos vamos a casar y vamos a tener un hermosa familia</p>
 </section>
 
