--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <section id="detallitos">
 <h2>Feliz 22 Añitos</h2>
-<img src="https://i.pinimg.com/564x/1a/19/3a/1a193ae72390c8c9f7e9d66214b64a8f.jpg" alt="fotito">
+<img src="https://github.com/Kev2801/Balto_conquistador/blob/main/20211016_191241.jpg" alt="fotito">
 <p>El día de hoy cumples 22 añitos amor y me alegra mucho poder acompañarte este día tan especial para ti</p>
 </section>
 
